@@ -89,6 +89,9 @@ ignore-glob
   *free
   g_simple_async_result_new_error
   g_simple_async_report_error_in_idle
+  g_file_new_from_commandline_arg
+  g_file_new_from_path
+  g_file_new_from_uri
 %%
 override g_drive_get_volumes noargs
 static PyObject *
